# olwlg_stuff

./: .gitignore  README.md  olwg_nametags.py  olwlg_nametags.py  pyproject.toml  requirements.in  requirements.txt
olwlg_nametags/: olwlg_nametags.py
