[project]
name = "olwlg-nametags"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bgg-api",
    "reportlab",
    "requests",
    "requests-cache",
]
[dependency-groups]
dev = ["types-requests", "types-reportlab"]
[project.scripts]
olwlg-nametags = "olwlg_nametags.olwlg_nametags:main"
